# roboptim-core-plugin-nlopt

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/roboptim/core/plugin/nlopt/: nlopt.hh
src/: CMakeLists.txt  nlopt.cc
tests/: CMakeLists.txt
